Work in progress

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-            <a class="brand" href="#">RB Stats</a>
+            <a class="brand" href="#">Civ Sim</a>
             <ul class="nav">
                 {% for tab in tabs %}
                     <li{% if tab.selected %} class="active"{% endif %}><a href="{{ tab.path }}">{{ tab.tab }}</a></li>
