--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,22 +12,26 @@
 </head>
 <body>
 <div class="container">
-    <div class="navbar navbar-inverse">
-        <div class="navbar-inner">
-            <a class="brand" href="#">Civ Sim</a>
-            <ul class="nav">
-                {% for tab in tabs %}
-                    <li{% if tab.selected %} class="active"{% endif %}><a href="{{ tab.path }}">{{ tab.tab }}</a></li>
-                {% endfor %}
-            </ul>
-            {% if current_user %}
-            <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">{{ current_user.username }}</a>
-                <a href="/auth/logout" class="navbar-link">(logout)</a>
-            </p>
-            {% endif %}
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Civ Sim</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    {% for tab in tabs %}
+                        <li{% if tab.selected %} class="active"{% endif %}><a href="{{ tab.path }}">{{ tab.tab }}</a></li>
+                    {% endfor %}
+                </ul>
+                {% if current_user %}
+                <p class="navbar-text pull-right">
+                    <a href="#" class="navbar-link">{{ current_user.username }}</a>
+                    <a href="/auth/logout" class="navbar-link">(logout)</a>
+                </p>
+                {% endif %}
+            </div>
         </div>
-    </div>
+    </nav>
 
     {% block body %}{% endblock %}
 </div>
