--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -5,9 +5,10 @@
 <div id="city">
     <div id="city-header"></div>
     <div id="tile-grid"></div>
+
     <table class="table table-striped table-hover">
         <thead>
-            <th>Turn</th><th>Pop</th><th>Food</th><th>Hammers</th>
+            <th>Turn</th><th>Tiles</th></th><th>Pop</th><th>Food</th><th>Hammers</th>
         </thead>
         <tbody id="city-turns"></tbody>
     </table>
@@ -33,8 +34,17 @@
     </div>
 </div>
 
+<div id="tile-select-popup" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div id="modal-tile-grid" class="modal-tile-grid"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/template" id="city-header-template">
-    Header!
 </script>
 
 <script type="text/template" id="city-tile-template">
@@ -46,6 +56,7 @@
 
 <script type="text/template" id="city-turn-template">
     <td><%- turn %></td>
+    <td class="tile-select"><%- tilesWorked %></td>
     <td><%- pop %></td>
     <td><%- food %></td>
     <td><%- hammers %></td>
