--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -6,9 +6,9 @@
     <div id="city-header"></div>
     <div id="tile-grid"></div>
 
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover table-condensed">
         <thead>
-            <th>Turn</th><th>Tiles</th></th><th>Pop</th><th>Food</th><th>Hammers</th>
+            <th>Turn</th><th>Tiles</th></th><th>Pop</th><th>Food</th><th>Hammers</th><th>Notes</th>
         </thead>
         <tbody id="city-turns"></tbody>
     </table>
@@ -56,10 +56,11 @@
 
 <script type="text/template" id="city-turn-template">
     <td><%- turn %></td>
-    <td class="tile-select"><%- tilesWorked %></td>
+    <td class="tile-select<% if (!validTiles) { %> danger<% } %>"><small><%- tilesWorked %></small></td>
     <td><%- pop %></td>
-    <td><%- food %></td>
+    <td><%- food %><%- (foodSurplus >= 0 ? '+':'-') + Math.abs(foodSurplus) %> / <%- foodToGrow %></td>
     <td><%- hammers %></td>
+    <td><small><%- note %></small></td>
 </script>
 
 {% endblock %}
@@ -69,5 +70,6 @@
 {% endblock %}
 
 {% block js %}
-    <script src="/static/js/local/cities.js"></script>
+    <script src="/static/js/local/cities-models.js"></script>
+    <script src="/static/js/local/cities-views.js"></script>
 {% endblock %}
