--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -3,12 +3,21 @@
 {% block body %}
 
 <div id="city">
+    <form class="form-inline text-right" role="form">
+        <div class="form-group">
+            <label class="sr-only" for="exampleInputEmail2">Email address</label>
+            <input type="text" class="form-control" id="city-filename" placeholder="Filename">
+        </div>
+
+        <button type="button" id="load-city" class="btn btn-default">Load</button>
+        <button type="button" id="save-city" class="btn btn-default">Save</button>
+    </form>
     <div id="city-header"></div>
     <div id="tile-grid"></div>
 
     <table class="table table-striped table-hover table-condensed">
         <thead>
-            <th>Turn</th><th>Tiles</th></th><th>Pop</th><th>Food</th><th>Hammers</th><th>Notes</th>
+            <th>Turn</th><th>Tiles</th></th><th>Pop</th><th>Food</th><th>Build</th><th>Hammers</th><th>Notes</th>
         </thead>
         <tbody id="city-turns"></tbody>
     </table>
@@ -44,6 +53,15 @@
     </div>
 </div>
 
+<div id="build-select-popup" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/template" id="city-header-template">
 </script>
 
@@ -59,8 +77,35 @@
     <td class="tile-select<% if (!validTiles) { %> danger<% } %>"><small><%- tilesWorked %></small></td>
     <td><%- pop %></td>
     <td><%- food %><%- (foodSurplus >= 0 ? '+':'-') + Math.abs(foodSurplus) %> / <%- foodToGrow %></td>
-    <td><%- hammers %></td>
+    <td class="build-select"><%- build.name %></td>
+    <td><%- hammers %>+<%- hammersProduced %></td>
     <td><small><%- note %></small></td>
+</script>
+
+<script type="text/template" id="build-select-template">
+<form role="form">
+    <div class="form-group">
+        <label>Select from Presets</label>
+        <select class="form-control" name="build-preset">
+            <option>(Select preset)</option>
+            <% _.each(presets, function(preset) { %>
+                <option><%- preset.name %></option>
+            <% }); %>
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Build</label>
+        <input type="text" class="form-control" name="build-name" value="<%- build.name %>">
+    </div>
+    <div class="form-group">
+        <label>Hammer Cost:</label>
+        <input type="text" class="form-control" name="build-hammers" value="<%- build.hammers %>">
+    </div>
+    <div class="form-group">
+        <label>Hammer Bonus</label>
+        <input type="text" class="form-control" name="build-bonus" value="<%- build.bonus %>">
+    </div>
+</form>
 </script>
 
 {% endblock %}
